# floraflow

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  render.yaml  vercel.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AIResultRenderer.tsx  Layout.tsx
frontend/src/i18n/: LangContext.tsx  translations.ts
frontend/src/pages/: Analyze.tsx  Batches.tsx  Dashboard.tsx  GreenhouseDetail.tsx  Greenhouses.tsx  Marketplace.tsx  Orders.tsx  Quality.tsx  Satellite.tsx  ShipmentDetail.tsx  Shipments.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: fetch_real_data.py
src/floraflow/: __init__.py  ai.py  api.py  cli.py  database.py  demo.py  feeds.py  models.py  optimization.py  predictive.py  store.py  vision.py
