[project]
name = "floraflow"
version = "0.1.0"
description = "AI-powered floriculture and premium crop revenue optimization for Estado de Mexico"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "ddgs>=8.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
]

[project.scripts]
floraflow = "floraflow.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
